# bunker-stats

./: .gitignore  Cargo.toml  LICENSE  README.md  bench_200k.csv  bench_500k.csv  bench_full_suite_results.csv  bench_serial.csv  bench_skip_wip.csv  pyproject.toml
.hypothesis/constants/: 0ea1acee420e14de  2a1147c309048d3f  3f4a1ee25ffaa6e5  7f0741c7bde67d09  bcbf26ba5e8a1ad3  c1b2ce2ee8c47f6e
benchmarks/: bench_bunker-stats.py  bench_bunker_all.py  bench_bunker_results.csv  bench_bunker_stats.py  bench_compare.csv  bench_compare_backends_enhanced.py  bench_compare_backends_subproc_v8.py  bench_compare_backends_subproc_v9.py  bench_debug.csv  bench_rolling_axis0_results.csv  bench_suite_all_debug.py  bench_suite_results.csv  bs_debug.py  bunker_stats_vs_numpy_500k_report.md  results_500k.csv  test_advanced_ops.py  test_nan_behavior.py
benchmarks/_subproc_debug/: subproc_cohens_d_2samp_np.py  subproc_hedges_g_2samp_np.py  subproc_iqr_outliers_np.py  subproc_kde_gaussian_np.py  subproc_ks_1samp_np.py  subproc_mann_whitney_u_np.py  subproc_mean_axis_np.py  subproc_pad_nan_np.py  subproc_quantile_bins_np.py  subproc_robust_scale_np.py  subproc_t_test_2samp_np.py  subproc_trimmed_mean_np.py  subproc_winsorize_np.py  subproc_zscore_outliers_np.py
bunker_stats/: __init__.py  pandas_helpers.py
src/: lib.rs
src/infer/: chi2.rs  common.rs  effect.rs  ks.rs  mann_whitney.rs  mod.rs  ttest.rs
tests/: _infer_debug.py  conftest.py  test_nan_coverage.py  test_property_nan_and_shapes.py  test_quantile_matrix_parity.py  test_robust_parity.py  test_rolling_axis0.py
(+9 files in other folders)
